@@ -424,13 +424,7 @@ up. So please consider the logs for the correct value. Remember to fill in
 hexadecimal values if you are using an editor to modify your channels.conf
 (number 10 becomes an "a", number 11 a "b", ...).
 
-2. Turn encrypted channels into Free-to-Air channels on the client. Again,
-either enter the channels menu or edit the client's channels.conf. You will
-also have to disable automatic channel updates on the client or (if streamdev
-is the only DVB source) disable streamdev's filter streaming feature. Otherwise
-VDR will revert the channel into an encrypted one.
-
-3. Apply either patch "patches/vdr-1.6.0-intcamdevices.patch" or patch
+2. Apply either patch "patches/vdr-1.6.0-intcamdevices.patch" or patch
 "patches/vdr-1.6.0-ignore_missing_cam.diff" to your client VDR. Intcamdevices
 is the clean solution. But as it modifies the VDR API, so you will need to
 recompile all of your plugins. The ignore_missing_cam patch is trivial, no need
