@@ -1,6 +1,9 @@
 VDR Plugin 'streamdev' Revision History
 ---------------------------------------
 
+- fixed regression from fix for switching between encrypted channels. It was
+  no longer possible to receive multiple (FTA) streams from the same
+  transponder
 - silenced warnings concerning asprintf (requested by Rolf Ahrenberg)
 - don't update recordings list on CmdPLAY (reported by BBlack)
 - cleaned up common.h / common.c
